--- a/core.yml
+++ b/core.yml
@@ -20,3 +20,30 @@ spring:
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
+
+springdoc:
+  swagger-ui:
+    enabled: true  #开启/禁止swagger,prod可以设置为false
+    path: /swagger-ui.html
+    tags-sorter: alpha
+    operations-sorter: alpha
+  packages-to-scan: ##需要扫描的包,可以配置多个
+    - cn.com.cgh
+  paths-to-exclude:  ##配置不包含在swagger文档中的api
+    - /api/test/**
+  api-docs:
+    enabled: true #开启/禁止api-docs, prod可以设置为false
+    path: /v3/api-docs #api的json文档
+    version: openapi_3_0
+  use-management-port: false
+  group-configs: ##分组配置
+    - group: 'default'
+      paths-to-match:
+        - /**
+      packages-to-scan:
+        - cn.com.cgh
+
+knife4j:
+  enable: true
+  setting:
+    language: zh_cn
