--- a/core/src/main/resources/bootstrap.properties
+++ b/core/src/main/resources/bootstrap.properties
@@ -1,36 +1,13 @@
 graceful-response.print-exception-in-global-advice=true
 graceful-response.response-style=1
 graceful-response.origin-exception-using-detail-message=true
-spring.mvc.throw-exception-if-no-handler-found=true
 spring.web.resources.addMappings=false
 spring.cache.cache-names=loadBalancerCache
 spring.cache.type=caffeine
-
+spring.web.resources.static-locations=classpath:/META-INF/resources/,classpath:/static/
 server.undertow.threads.io=16
 server.undertow.threads.worker=128
 
 spring.cloud.nacos.config.extension-configs[0].data-id=core.yml
 spring.cloud.nacos.config.extension-configs[0].group=DEFAULT_GROUP
 spring.cloud.nacos.config.extension-configs[0].refresh=true
-
-modulelist=com.baomidou.mybatisplus.extension.p6spy.MybatisPlusLogFactory,com.p6spy.engine.outage.P6OutageFactory
-# ???????
-logMessageFormat=com.baomidou.mybatisplus.extension.p6spy.P6SpyLogger
-#????????
-appender=com.baomidou.mybatisplus.extension.p6spy.StdoutLogger
-# ???????? sql
-#appender=com.p6spy.engine.spy.appender.Slf4JLogger
-# ?? p6spy driver ??
-deregisterdrivers=true
-# ??JDBC URL??
-useprefix=true
-# ???? Log ??,????????error,info,batch,debug,statement,commit,rollback,result,resultset.
-excludecategories=info,debug,result,commit,resultset
-# ????
-dateformat=yyyy-MM-dd HH:mm:ss
-# ???????
-#driverlist=org.h2.Driver
-# ?????SQL??
-outagedetection=true
-# ?SQL???? 2 ?
-outagedetectioninterval=2
