--- a/login/src/main/resources/bootstrap-dev.yml
+++ b/login/src/main/resources/bootstrap-dev.yml
@@ -19,20 +19,44 @@ spring:
       server-addr: 127.0.0.1:8848
   application:
     name: login
-springfox:
-  documentation:
-#    swagger:
-#      v2:
-#        path: /v2/swagger-ui.html
-#        enabled: true
-#        url: /swagger-ui.html
-    swagger-ui:
-      base-url: /swagger
-logging:
-  level:
-    com.p6spy: debug
-    org.springframework.cloud.nacos: debug
-    org.springframework.cloud.openfeign: debug
-    org.springframework.cloud.openfeign.ribbon: debug
-    org.springframework.cloud.openfeign.loadbalancer: debug
-    org.springframework.cloud.openfeign.ribbon.okhttp: debug
+
+springdoc:
+  paths-to-exclude:
+    - /api/test/**
+  swagger-ui:
+    enabled: true
+    path: /swagger-ui.html
+    tags-sorter: alpha
+#  use-management-port: false
+  api-docs:
+    path: /v3/api-docs
+    version: openapi_3_1
+  group-configs:
+    - group: 'default'
+      paths-to-match: '/**'
+      packages-to-scan: cn.com.cgh
+  default-flat-param-object: false
+  
+#knife4j:
+#  enable: true
+#  setting:
+#    language: zh-CN
+#    swagger-model-name: 实体类列表
+#    homeCustomLocation:
+#  documents:
+#    - name: 标题1
+#      locations: classpath:README.md
+#      group: md模块
+##    - name: 标题2
+##      locations: classpath:markdown1/*
+##      group: 用户模块
+#  basic:
+#    enable: false
+#    username: admin
+#    password: 123!@3$
+#    insight:
+#      enable: true
+#      service-name: boot3
+#      secret: S6CsnS8AnPVyb8vvChcdXm4R3p6A6KlAISxBg3IIEgk=
+#      server: http://localhost:10086
+#      namespace: spring3
