--- a/pom.xml
+++ b/pom.xml
@@ -21,21 +21,21 @@
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring.cloud.alibaba.version>2022.0.0.0</spring.cloud.alibaba.version>
-        <spring.cloud.version>2022.0.4</spring.cloud.version>
-        <spring.version>3.0.13</spring.version>
+        <spring.cloud.version>2022.0.0</spring.cloud.version>
+        <spring.version>3.0.6</spring.version>
         <lombok.version>1.18.30</lombok.version>
-        <fastjson2.version>2.0.44</fastjson2.version>
+        <fastjson2.version>2.0.34</fastjson2.version>
         <graceful.version>3.4.0-boot3</graceful.version>
         <jena.version>1.0</jena.version>
         <httpmime.version>4.5.13</httpmime.version>
         <lunar.version>1.6.3</lunar.version>
         <caffeine.version>3.1.8</caffeine.version>
         <logback.version>1.4.12</logback.version>
-        <snakeyaml.version>2.2</snakeyaml.version>
         <redis.json.version>20231013</redis.json.version>
 
         <mybatis-flex.version>1.7.6</mybatis-flex.version>
-        <mybatis.version>3.5.5</mybatis.version>
+        <mybatis.plus.version>3.5.5</mybatis.plus.version>
+        <mybatis.boot.version>3.0.3</mybatis.boot.version>
         <mybatis.generator.version>3.5.5</mybatis.generator.version>
         <mybatis.velocity.version>2.3</mybatis.velocity.version>
         <p6spy.version>3.9.1</p6spy.version>
@@ -44,37 +44,74 @@
         <mysql.version>8.2.0</mysql.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
         <org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
-        <oceanbase.version>1.0.0</oceanbase.version>
 
+        <easyexcel.version>3.1.1</easyexcel.version>
         <hutool.version>5.8.24</hutool.version>
-        <springfox.version>3.0.0</springfox.version>
-        <springdoc.version>1.7.0</springdoc.version>
+        <knife4j.version>4.4.1-SNAPSHOT</knife4j.version>
+        <guava.version>32.0.1-android</guava.version>
+        <javax.version>4.0.1</javax.version>
+        <security.oauth2.version>2.5.2.RELEASE</security.oauth2.version>
     </properties>
-
+    <repositories>
+        <repository>
+            <id>nexus-maven</id>
+            <name>nexus-maven</name>
+            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+        </repository>
+    </repositories>
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.13</version>
+        <version>3.0.6</version>
         <relativePath/>
     </parent>
 
     <dependencyManagement>
         <dependencies>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>${spring.cloud.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba.cloud</groupId>
+                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
+                <version>${spring.cloud.alibaba.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.github.xiaoymin</groupId>
+                <artifactId>knife4j-dependencies</artifactId>
+                <version>${knife4j.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>easyexcel</artifactId>
+                <version>${easyexcel.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.security.oauth</groupId>
+                <artifactId>spring-security-oauth2</artifactId>
+                <version>${security.oauth2.version}</version>
+            </dependency>
             <!--     swagger       -->
             <dependency>
-                <groupId>io.springfox</groupId>
-                <artifactId>springfox-boot-starter</artifactId>
-                <version>${springfox.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>io.springfox</groupId>
-                <artifactId>springfox-swagger-ui</artifactId>
-                <version>${springfox.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springdoc</groupId>
-                <artifactId>springdoc-openapi-ui</artifactId>
-                <version>${springdoc.version}</version>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
             </dependency>
             <dependency>
                 <groupId>cn.hutool</groupId>
@@ -82,11 +119,31 @@
                 <version>${hutool.version}</version>
             </dependency>
 
-            <!--    mybatis-fix 替换 mybatis-plus      -->
+<!--            <dependency>-->
+<!--                <groupId>com.baomidou</groupId>-->
+<!--                <artifactId>mybatis-plus-boot-starter</artifactId>-->
+<!--                <version>${mybatis.plus.version}</version>-->
+<!--            </dependency>-->
+            <dependency>
+                <groupId>com.baomidou</groupId>
+                <artifactId>mybatis-plus</artifactId>
+                <version>${mybatis.plus.version}</version>
+            </dependency>
             <dependency>
                 <groupId>com.baomidou</groupId>
                 <artifactId>mybatis-plus-boot-starter</artifactId>
-                <version>${mybatis.version}</version>
+<!--                <version>3.4.1</version>-->
+                <version>${mybatis.plus.version}</version>
+            </dependency>
+<!--            <dependency>-->
+<!--                <groupId>org.mybatis.spring.boot</groupId>-->
+<!--                <artifactId>mybatis-spring-boot-starter</artifactId>-->
+<!--                <version>${mybatis.boot.version}</version>-->
+<!--            </dependency>-->
+            <dependency>
+                <groupId>org.mybatis</groupId>
+                <artifactId>mybatis-spring</artifactId>
+                <version>${mybatis.boot.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.apache.velocity</groupId>
@@ -111,16 +168,11 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-            <!--    redis -> json        -->
+            <!--    redis json        -->
             <dependency>
                 <groupId>org.json</groupId>
                 <artifactId>json</artifactId>
                 <version>${redis.json.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.yaml</groupId>
-                <artifactId>snakeyaml</artifactId>
-                <version>${snakeyaml.version}</version>
             </dependency>
             <dependency>
                 <groupId>cn.com.cgh</groupId>
@@ -141,27 +193,6 @@
                 <groupId>com.feiniaojin</groupId>
                 <artifactId>graceful-response</artifactId>
                 <version>${graceful.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-dependencies</artifactId>
-                <version>${spring.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-dependencies</artifactId>
-                <version>${spring.cloud.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-            <dependency>
-                <groupId>com.alibaba.cloud</groupId>
-                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
-                <version>${spring.cloud.alibaba.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
             </dependency>
 
             <dependency>
