--- a/core/src/main/resources/bootstrap.properties
+++ b/core/src/main/resources/bootstrap.properties
@@ -1,13 +1,9 @@
-graceful-response.print-exception-in-global-advice=true
-graceful-response.response-style=1
-graceful-response.origin-exception-using-detail-message=true
-graceful-response.response-class-full-name=cn.com.cgh.core.config.ResponseImpl
-graceful-response.exclude-exceptions[0]=com.alibaba.csp.sentinel
 
 ## cacheManager 配置
 spring.cache.cache-names=login,user,core,gateway
 spring.cache.caffeine.spec=maximumSize=100,expireAfterWrite=10m
 spring.cache.type=caffeine
+spring.cloud.util.enabled=true
 
 # 核心配置。
 spring.cloud.nacos.config.extension-configs[0].data-id=core.yml
