--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -31,6 +31,10 @@
             <artifactId>knife4j-gateway-spring-boot-starter</artifactId>
         </dependency>
         <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.alibaba.fastjson2</groupId>
             <artifactId>fastjson2</artifactId>
         </dependency>
